# pyqt-cpu

./: .gitignore  .pre-commit-config.yaml  README.md  cpu.py  notifier.py  pyproject.toml  requirements.txt  resources.py  setup.cfg
cpu_notifier/: about.py  cpu.py
cpu_notifier/resources/: res_icon.py  res_number.py
